--- a/config/locales/views/event_tracks/ru.yml
+++ b/config/locales/views/event_tracks/ru.yml
@@ -4,6 +4,8 @@ ru:
       charts: Графики
       jump_range: Отделение и открытие
       penalties: Штрафы
+      delete: Удалить результат
+      delete_confirmation: Вы уверены что хотите удалить этот результат?
     form_modal:
       from_file: Из файла
       from_existent_track: Существующий трек
