--- a/config/locales/views/static_pages/ru.yml
+++ b/config/locales/views/static_pages/ru.yml
@@ -22,3 +22,6 @@ ru:
         help: Поддерживаются файлы в формате csv, gpx, tes и kml
         comment_plh: Пара слов о Вашем полете
         submit: Загрузить
+      about_me:
+        greeting: Привет! Меня зовут Александр
+        message: Я разработчик Skyderby. Если возник вопрос, напишите или позвоните, буду рад ответить.
