added task translations

--- a/config/locales/views/virtual_competitions/ru.yml
+++ b/config/locales/views/virtual_competitions/ru.yml
@@ -16,6 +16,7 @@ ru:
       straightline_distance_in_time: 'Цель: пролететь максимальное расстояние за %{parameter} сек. Расстояние измеряется по прямой линии.'
       time: 'Цель: лететь с минимально возможной вертикальной скоростью находясь в зачетном окне (%{range_from} - %{range_to} м)'
       flare: 'Цель: взлететь на как можно большую высоту'
+      base_race: 'Цель: пересечь финишную черту за минимальное время'
     place: 'Место проведения:'
     worldwide: 'Всемирные'
     suit: 'Тип костюма: %{suit}'
