--- a/config/locales/views/virtual_competitions/en.yml
+++ b/config/locales/views/virtual_competitions/en.yml
@@ -16,6 +16,7 @@ en:
       straightline_distance_in_time: Task is to fly as far as possible in %{parameter} sec. Distance measuring as a straight-line.
       time: Task is to fly with the slowest fall rate possible through the competition window (%{range_from} - %{range_to} m)
       flare: Task is to gain as much altitude as possible
+      base_race: Task is to cross finish line as fast as possible
     place: 'Location:'
     worldwide: Worldwide
     suit: 'Suit type: %{suit}'
