--- a/config/locales/views/will_paginate/ru.yml
+++ b/config/locales/views/will_paginate/ru.yml
@@ -3,4 +3,4 @@ ru:
     previous_label: '&#8592; Пред.'
     next_label: 'След. &#8594;'
     page_gap: '&hellip;'
-    load_more: Загрузить еще...
+    load_more: "Загрузить еще&hellip;"
