--- a/config/locales/views/will_paginate/es.yml
+++ b/config/locales/views/will_paginate/es.yml
@@ -1,6 +1,6 @@
 es:
   will_paginate:
-    load_more: Carga más…
     previous_label: "&#8592; Anterior"
     next_label: "Siguiente &#8594;"
     page_gap: "&hellip;"
+    load_more: "Carga más&hellip;"
