--- a/config/locales/views/event_tracks/it.yml
+++ b/config/locales/views/event_tracks/it.yml
@@ -4,6 +4,7 @@ it:
       charts: Grafici
       jump_range: Intervallo di caduta libera
       penalties: Penalità
+      maps: Mappa
       delete: Cancella traccia
       delete_confirmation: Sei sicuro di voler cancellare questo traccia?
     form_modal:
