--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -18,3 +18,5 @@ fr:
     unselect_all: Désélectionner tout
     overview: Vue d'ensemble
     back: Retour
+    charts: Graphiques
+    jump_range: Durée du saut
