--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -15,6 +15,8 @@ it:
     unselect_all: Deseleziona tutto
     overview: Panoramica
     back: Indietro
+    charts: Grafici
+    jump_range: Intervallo di caduta libera
   users:
     profile:
       edit:
