add designated lane start setting

--- a/config/locales/models/events/ru.yml
+++ b/config/locales/models/events/ru.yml
@@ -12,6 +12,9 @@ ru:
         wind_cancellation: Вычитание ветра
         visibility: Доступ
         number_of_results_for_total: Количество прыжков в зачет
+        designated_lane_starts:
+          designated_lane_start_on_5_sec: Коридор считается от 5 секунд после отделения
+          designated_lane_start_on_enter_window: Коридор считается от входа в соревновательное окно
   event_status:
     draft: Подготовка
     published: Опубликовано
