--- a/config/locales/models/events/en.yml
+++ b/config/locales/models/events/en.yml
@@ -12,6 +12,9 @@ en:
         wind_cancellation: Wind cancellation
         visibility: Visibility
         number_of_results_for_total: Number of jumps for total
+        designated_lane_starts:
+          designated_lane_start_on_5_sec: Designated lane starts on 5 sec after exit
+          designated_lane_start_on_enter_window: Designate lane starts on enter competition window
   event_status:
     draft: Draft
     published: Published
