--- a/config/locales/models/events/rounds/de.yml
+++ b/config/locales/models/events/rounds/de.yml
@@ -1,10 +1,10 @@
 de:
   activerecord:
     models:
-      round: Runde
+      event/round: Runde
     errors:
       models:
-        round:
+        event/round:
           attributes:
             base:
               restrict_dependent_destroy:
