--- a/config/locales/models/events/rounds/ru.yml
+++ b/config/locales/models/events/rounds/ru.yml
@@ -1,10 +1,10 @@
 ru:
   activerecord:
     models:
-      round: Раунд
+      event/round: Раунд
     errors:
       models:
-        round:
+        event/round:
           attributes:
             base:
               restrict_dependent_destroy:
