--- a/config/locales/models/events/it.yml
+++ b/config/locales/models/events/it.yml
@@ -11,6 +11,10 @@ it:
         rules: Regole
         wind_cancellation: Cancellazione dell'effetto del vento
         visibility: Visibilità
+        visibilities:
+          public_event: Pubblico
+          unlisted_event: Non in elenco
+          private_event: Privato
         number_of_results_for_total: Il punteggio medio è basato su questo numero di salti
   event_status:
     draft: Bozza
