--- a/config/locales/views/layouts/ru.yml
+++ b/config/locales/views/layouts/ru.yml
@@ -4,6 +4,7 @@ ru:
       tracks: Треки
       about: О проекте
       sign_in: Войти
+      sign_in_facebook: Войти с помощью Facebook
       sign_up: Зарегистрироваться
       sign_out: Выйти
       login_email: Адрес эл.почты
