--- a/config/locales/devise/ru.yml
+++ b/config/locales/devise/ru.yml
@@ -76,6 +76,8 @@ ru:
     omniauth_callbacks:
       failure: Вы не можете войти в систему с учетной записью из %{kind}, т.к. "%{reason}".
       success: "Вход в систему выполнен с учетной записью из %{kind}."
+      failure_connect: Не удалось привязать учетную запись %{kind}, т.к. "%{reason}".
+      success_connect: Учетная запись %{kind} привязана к вашему аккаунту.
     passwords:
       edit:
         change_my_password: "Изменить мой пароль"
