Unified devise views

--- a/config/locales/devise/ru.yml
+++ b/config/locales/devise/ru.yml
@@ -104,7 +104,7 @@ ru:
         update: "Обновить"
         we_need_your_current_password_to_confirm_your_changes: "введите текущий пароль для подтверждения изменений"
       new:
-        sign_up: "Регистрация"
+        sign_up: Зарегистрироваться
       signed_up: "Добро пожаловать! Вы успешно зарегистрировались."
       signed_up_but_inactive: "Вы успешно зарегистрированы. Однако, вы не можете войти в систему, потому что ваша учетная запись не активирована."
       signed_up_but_locked: "Вы успешно зарегистрированы. Однако, вы не можете войти в систему, потому что ваша учетная запись заблокирована."
@@ -126,7 +126,7 @@ ru:
         sign_in: "Войти"
         sign_in_with_provider: "Войти с помощью: %{provider}"
         connect_provider: "Привязать %{provider}"
-        sign_up: "Регистрация"
+        sign_up: Зарегистрироваться
       minimum_password_length:
         few: "(минимум %{count} знака)"
         many: "(минимум %{count} знаков)"
