--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -17,6 +17,7 @@ it:
     back: Indietro
     charts: Grafici
     jump_range: Intervallo di caduta libera
+    or: Oppure
   users:
     profile:
       edit:
