Track edit and ownerships forms

--- a/config/locales/models/tracks/en.yml
+++ b/config/locales/models/tracks/en.yml
@@ -5,6 +5,7 @@ en:
     attributes:
       track:
         id: '#'
+        owner: Owner
         name: Pilot
         suit: Suit
         place: Place
