--- a/config/locales/views/layouts/en.yml
+++ b/config/locales/views/layouts/en.yml
@@ -14,7 +14,7 @@ en:
       profile: Profile
       upload_track: Upload track
       competitions: Competitions
-      online_competitions: Online competitions
+      online_competitions: World ranking
       places: Places
     footer:
       made_with: Made with
