--- a/config/locales/views/layouts/ru.yml
+++ b/config/locales/views/layouts/ru.yml
@@ -14,7 +14,7 @@ ru:
       admin_panel: Панель администратора
       upload_track: Загрузить трек
       competitions: Соревнования
-      online_competitions: Онлайн соревнования
+      online_competitions: Мировой рейтинг
       places: Локации
     footer:
       made_with: Сделано с
