Link to full jump in result page

--- a/config/locales/models/events/results/de.yml
+++ b/config/locales/models/events/results/de.yml
@@ -2,6 +2,7 @@ de:
   activerecord:
     models:
       event/result: Ergebnis
+      event/full_jump: Voller Sprung
     attributes:
       event/result:
         file: Datei mit Track
