--- a/config/locales/models/events/results/en.yml
+++ b/config/locales/models/events/results/en.yml
@@ -2,6 +2,7 @@ en:
   activerecord:
     models:
       event/result: Result
+      event/full_jump: Full Jump
     attributes:
       event/result:
         file: File with track
