--- a/config/locales/models/events/results/it.yml
+++ b/config/locales/models/events/results/it.yml
@@ -2,6 +2,7 @@ it:
   activerecord:
     models:
       event/result: Risultati
+      event/full_jump: Salto completo
     attributes:
       event/result:
         file: File con tracce
