created link to full jump in result page

--- a/config/locales/models/events/results/ru.yml
+++ b/config/locales/models/events/results/ru.yml
@@ -2,6 +2,7 @@ ru:
   activerecord:
     models:
       event/result: Результат
+      event/full_jump: Полный прыжок
     attributes:
       event/result:
         file: Файл трека
