--- a/config/locales/models/events/results/es.yml
+++ b/config/locales/models/events/results/es.yml
@@ -2,6 +2,7 @@ en:
   activerecord:
     models:
       event/result: Resultado
+      event/full_jump: Salto completo
     attributes:
       event/result:
         file: El archivo de la pista
