changed file for localization

--- a/config/locales/views/events/de.yml
+++ b/config/locales/views/events/de.yml
@@ -17,3 +17,4 @@ de:
       results_showing: 'Results are '
       results_adjusted_caption: 'adjusted for wind'
       results_not_adjusted_caption: 'not adjusted for wind'
+      full_jump: Voller Sprung
