--- a/config/locales/views/events/es.yml
+++ b/config/locales/views/events/es.yml
@@ -15,3 +15,4 @@ es:
       results_showing: 'Results are '
       results_adjusted_caption: 'adjusted for wind'
       results_not_adjusted_caption: 'not adjusted for wind'
+      full_jump: Salto completo
