--- a/config/locales/views/events/fr.yml
+++ b/config/locales/views/events/fr.yml
@@ -29,3 +29,4 @@ fr:
       results_showing: Les résultats sont
       results_adjusted_caption: ajustement en fonction du vent
       results_not_adjusted_caption: sans ajustement en fonction du vent
+      full_jump: Saut complet
