--- a/config/locales/views/events/it.yml
+++ b/config/locales/views/events/it.yml
@@ -29,3 +29,4 @@ it:
       results_showing: 'I risultati sono '
       results_adjusted_caption: 'azione del vento compensata'
       results_not_adjusted_caption: 'azione del vento non compensata'
+      full_jump: Salto completo
