--- a/config/locales/views/events/ru.yml
+++ b/config/locales/views/events/ru.yml
@@ -30,3 +30,4 @@ ru:
       results_showing: 'Результаты: '
       results_adjusted_caption: 'за вычетом ветра'
       results_not_adjusted_caption: 'без учета влияния ветра'
+      full_jump: Весь полет
