--- a/config/locales/views/events/en.yml
+++ b/config/locales/views/events/en.yml
@@ -28,3 +28,4 @@ en:
       results_showing: 'Results are '
       results_adjusted_caption: 'adjusted for wind'
       results_not_adjusted_caption: 'not adjusted for wind'
+      full_jump: Full Jump
