Rewrite tournaments  qualifications

--- a/config/locales/views/tournaments/ru.yml
+++ b/config/locales/views/tournaments/ru.yml
@@ -2,3 +2,4 @@ ru:
   tournaments:
     show:
       show_details: 'Нажмите для просмотра деталей трека'
+      edit_link: 'Время старта, результат, время под куполом'
