--- a/config/locales/views/tournaments/en.yml
+++ b/config/locales/views/tournaments/en.yml
@@ -2,3 +2,4 @@ en:
   tournaments:
     show:
       show_details: 'Click to view track details'
+      edit_link: 'Start time, result, canopy time'
