--- a/config/locales/models/events/en.yml
+++ b/config/locales/models/events/en.yml
@@ -17,8 +17,8 @@ en:
           private_event: Private
         number_of_results_for_total: Number of jumps for total
         designated_lane_starts:
-          designated_lane_start_on_10_sec: Designated lane starts on 10 sec after exit
-          designated_lane_start_on_enter_window: Designate lane starts on enter competition window
+          on_10_sec: Designated lane starts on 10 sec after exit
+          on_enter_window: Designate lane starts on enter competition window
   event_status:
     draft: Draft
     published: Published
