--- a/config/locales/models/events/ru.yml
+++ b/config/locales/models/events/ru.yml
@@ -17,8 +17,8 @@ ru:
           private_event: Ограниченный
         number_of_results_for_total: Количество прыжков в зачет
         designated_lane_starts:
-          designated_lane_start_on_10_sec: Коридор считается от 10 секунд после отделения
-          designated_lane_start_on_enter_window: Коридор считается от входа в соревновательное окно
+          on_10_sec: Коридор считается от 10 секунд после отделения
+          on_enter_window: Коридор считается от входа в соревновательное окно
   event_status:
     draft: Подготовка
     published: Опубликовано
