--- a/config/locales/models/events/competitors/ru.yml
+++ b/config/locales/models/events/competitors/ru.yml
@@ -7,6 +7,7 @@ ru:
         suit: Костюм
         section: Класс
         profile: Профиль
+        assigned_number: Назначенный номер
       event/competitor/profile:
         name: Имя Фамилия
     errors:
