Fix typo in Italian translation

--- a/config/locales/views/profiles/it.yml
+++ b/config/locales/views/profiles/it.yml
@@ -1,7 +1,7 @@
 it:
   profiles:
     header:
-      tracks: Traccie
+      tracks: Tracce
       flight_profiles: Profili di volo
     merges:
       form_modal:
