--- a/config/locales/views/layouts/it.yml
+++ b/config/locales/views/layouts/it.yml
@@ -1,7 +1,7 @@
 it:
   application:
     header:
-      tracks: Traccie
+      tracks: Tracce
       competitions: Competizioni
       online_competitions: Competizioni Online
       places: Luoghi
