--- a/config/locales/views/virtual_competitions/en.yml
+++ b/config/locales/views/virtual_competitions/en.yml
@@ -9,12 +9,12 @@ en:
     navbar:
       overall: Overall
     tasks:
-      speed: Task is to fly as fast as possible horizontally over the ground through the competition window (%{range_from} - %{range_to} m)
-      distance: Task is to fly as far as possible through the competition window (%{range_from} - %{range_to} m)
+      speed: Task is to fly as fast as possible horizontally over the ground through the competition window 3000 - 2000 m and 2500 - 1500 m (starting Jan 2020)
+      distance: Task is to fly as far as possible through the competition window 3000 - 2000 m and 2500 - 1500 m (starting Jan 2020)
       distance_in_time: Task is to fly as far as possible in %{parameter} sec
       distance_in_altitude: Task is to fly as far as possible using %{parameter} meters of altitude
       straightline_distance_in_time: Task is to fly as far as possible in %{parameter} sec. Distance measuring as a straight-line.
-      time: Task is to fly with the slowest fall rate possible through the competition window (%{range_from} - %{range_to} m)
+      time: Task is to fly with the slowest fall rate possible through the competition window 3000 - 2000 m and 2500 - 1500 m (starting Jan 2020)
       flare: Task is to gain as much altitude as possible
       base_race: Task is to cross finish line as fast as possible
     place: 'Location:'
