--- a/config/locales/views/virtual_competitions/ru.yml
+++ b/config/locales/views/virtual_competitions/ru.yml
@@ -9,12 +9,12 @@ ru:
     navbar:
       overall: За все время
     tasks:
-      speed: 'Цель: лететь с максимально возможной горизонтальной скоростью находясь в зачетном окне (%{range_from} - %{range_to} м)'
-      distance: 'Цель: пролететь максимальное расстояние находясь в зачетном окне (%{range_from} - %{range_to} м)'
+      speed: 'Цель: лететь с максимально возможной горизонтальной скоростью находясь в зачетном окне 3000 - 2000 м и 2500 - 1500 м (начиная с 2020 года)'
+      distance: 'Цель: пролететь максимальное расстояние находясь в зачетном окне 3000 - 2000 м и 2500 - 1500 м (начиная с 2020 года)'
       distance_in_time: 'Цель: пролететь максимальное расстояние за %{parameter} сек'
       distance_in_altitude: 'Цель: пролететь максимальное расстояние за %{parameter} метров по высоте'
       straightline_distance_in_time: 'Цель: пролететь максимальное расстояние за %{parameter} сек. Расстояние измеряется по прямой линии.'
-      time: 'Цель: лететь с минимально возможной вертикальной скоростью находясь в зачетном окне (%{range_from} - %{range_to} м)'
+      time: 'Цель: лететь с минимально возможной вертикальной скоростью находясь в зачетном окне 3000 - 2000 м и 2500 - 1500 м (начиная с 2020 года)'
       flare: 'Цель: взлететь на как можно большую высоту'
       base_race: 'Цель: пересечь финишную черту за минимальное время'
     place: 'Место проведения:'
