--- a/config/locales/views/virtual_competitions/it.yml
+++ b/config/locales/views/virtual_competitions/it.yml
@@ -9,12 +9,12 @@ it:
     navbar:
       overall: Generale
     tasks:
-      speed: L'obbiettivo è di volare con la maggior velocità orizzontale possibile, misurata rispetto al terreno, attraverso la finestra di competizione (%{range_from} - %{range_to} m)
-      distance: L'obbiettivo è di volare più distante possibile attraverso la finestra di competizione (%{range_from} - %{range_to} m)
+      speed: L'obbiettivo è di volare con la maggior velocità orizzontale possibile, misurata rispetto al terreno, attraverso la finestra di competizione (3000 - 2000 m e tra 2500 - 1500 metri a partire da Gennaio 2020)
+      distance: L'obbiettivo è di volare più distante possibile attraverso la finestra di competizione (3000 - 2000 m e tra 2500 - 1500 metri a partire da Gennaio 2020)
       distance_in_time: L'obbiettivo è di volare il più distante possibile in un periodo di tempo di %{parameter} sec
       distance_in_altitude: L'obbiettivo è di volare il più distante possibile utilizzando %{parameter} mettri di altitudine per la planata
       straightline_distance_in_time: L'obbiettivo è di volare il più distante possibile in un periodo di tempo di %{parameter} sec. La distanza è misurata in linea retta.
-      time: L'obbiettivo è di volare con il minor rateo di discesa possibile attraverso la finestra di competizione (%{range_from} - %{range_to} m)
+      time: L'obbiettivo è di volare con il minor rateo di discesa possibile attraverso la finestra di competizione (3000 - 2000 m e tra 2500 - 1500 metri a partire da Gennaio 2020)
       flare: L'obbiettivo è di guadagnare la quantità maggiore di quota possibile
     place: 'Luogo:'
     worldwide: mondiale
