--- a/config/locales/views/places/en.yml
+++ b/config/locales/views/places/en.yml
@@ -7,3 +7,12 @@ en:
     show:
       visited_by: 'Visited by'
       delete_confirmation: "Are you sure you want delete this place?"
+    title: Locations
+    description: >
+      Locations are places on the map where located Dropzones or B.A.S.E. sites 
+      with some information about these places.
+    new: New
+    overview: Overview
+    videos: Videos
+    tracks: Tracks
+    edit: Edit
